--- a/public/about-us.html
+++ b/public/about-us.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Us - Saint Joseph Integrated Technical College</title>
+    <title>About Us - Saint Joseph Integrated Technical College</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link rel="stylesheet" href="/styles/styles.css" />
-    <link rel="shortcut icon" href="/images/sjitc.png" type="image/x-icon" />
+    <link rel="stylesheet" href="../styles/styles.css" />
+    <link rel="shortcut icon" href="../images/sjitc.png" type="image/x-icon" />
     <style>
         * {
       margin: 0;
@@ -21,7 +21,7 @@
     <!-- Header -->
     <header>
       <div class="logo">
-        <img src="/images/sjitc.png" alt="Logo" />
+        <img src="../images/sjitc.png" alt="Logo" />
       </div>
       <nav>
         <ul>
@@ -60,11 +60,11 @@ With a long and rewarding history of achievement in education behind us, our Col
 
 I hope you enjoy your visit to the website.
 <br><br>
-       <span style="color: blue;font-weight: bolder;">Rev. Brother Pie SEBAKIGA.</span><br>
-       <span style="color: black;text-decoration: underline;">Principal</span>
+       <span style="color: blue;">Rev. Brother Pie SEBAKIGA.</span><br>
+       <span style="color: rgb(0, 0, 255);text-decoration: underline;font-weight: bolder;">Principal</span>
        </p>
         <div style="flex: 2;">
-          <img src="/images/Screenshot 2025-06-04 085121.png" alt="Principal" style="border-radius: 10px;margin-top: -110px;">
+          <img src="../images/Screenshot 2025-06-04 085121.png" alt="Principal" style="border-radius: 10px;margin-top: -110px;">
         </div>
       </div>
     </div>
@@ -164,7 +164,7 @@ I hope you enjoy your visit to the website.
    <footer>
     <!-- Logo and Social Icons -->
     <div class="footer-section footer-logo">
-      <img src="/images/download (5).jpeg" alt="Logo">
+      <img src="../images/download (5).jpeg" alt="Logo">
       <div class="social-icons">
         <a href="#"><i class="fab fa-facebook-f"></i></a>
         <a href="#"><i class="fab fa-twitter"></i></a>
