--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Us - Saint Joseph Integrated Technical College</title>
+    <title>Home - Saint Joseph Integrated Technical College</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link rel="stylesheet" href="/styles/styles.css" />
-    <link rel="shortcut icon" href="/images/sjitc.png" type="image/x-icon" />
+    <link rel="stylesheet" href="../styles/styles.css" />
+    <link rel="shortcut icon" href="../images/sjitc.png" type="image/x-icon" />
     <style>
         * {
       margin: 0;
@@ -16,13 +16,13 @@
       font-family: Arial, sans-serif;
     }
     </style>
-  <script src="/script/script.js"></script>
+  <script src="../script/script.js"></script>
   </head>
   <body>
     <!-- Header -->
     <header>
       <div class="logo">
-        <img src="/images/sjitc.png" alt="Logo" />
+        <img src="../images/sjitc.png" alt="Logo" />
       </div>
       <nav>
         <ul>
@@ -59,7 +59,7 @@
 
     <section class="welcome">
       <div class="welcome-content">
-        <img src="/images/principal.jpg" alt="Principal" />
+        <img src="../images/principal.jpg" alt="Principal" />
         <div class="welcome-text">
           <h2>WELCOME TO SAINT JOSEPH INTEGRATED TECHNICAL COLLEGE!</h2>
           <p>
@@ -83,7 +83,7 @@
       <h2>LATEST NEWS & ANNOUNCEMENTS</h2>
       <div class="news-grid">
         <div class="news-card">
-          <img src="/images/images.jpeg" alt="News 1" class="News1" />
+          <img src="../images/images.jpeg" alt="News 1" class="News1" />
           <div class="news-card-content">
             <h3>New Programs Launched</h3>
             <p>Explore our new tech programs designed for future innovators.</p>
@@ -91,7 +91,7 @@
           </div>
         </div>
         <div class="news-card">
-          <img src="/images/download.png" alt="News 2" class="News2"/>
+          <img src="../images/download.png" alt="News 2" class="News2"/>
           <div class="news-card-content">
             <h3>Unity Club Opening</h3>
             <p>Celebrating diversity and unity among students.</p>
@@ -99,7 +99,7 @@
           </div>
         </div>
         <div class="news-card">
-          <img src="/images/images (1).jpeg" alt="News 3" class="News3"/>
+          <img src="../images/images (1).jpeg" alt="News 3" class="News3"/>
           <div class="news-card-content">
             <h3>Graduation Ceremony</h3>
             <p>Congratulation to our graduates of <br>2025 !</p>
@@ -114,17 +114,17 @@
       <h2>OUR FACILITY</h2>
       <div class="facilities-grid">
         <div class="facility-card">
-          <img src="/images/download (2).jpeg" alt="Facility 1" class="Facility1" />
+          <img src="../images/download (2).jpeg" alt="Facility 1" class="Facility1" />
           <h3>Certified Courses</h3>
           <p>Solar, Plumbing, Web Design, and more.</p>
         </div>
         <div class="facility-card">
-          <img src="/images/download (3).jpeg" alt="Facility 2" class="Facility2" />
+          <img src="../images/download (3).jpeg" alt="Facility 2" class="Facility2" />
           <h3>Alumini Network</h3><br>
           <p>Strong connections to foster career <br>growth.</p>
         </div>
         <div class="facility-card">
-          <img src="/images/images (2).jpeg" alt="Facility 3" class="Facility3" />
+          <img src="../images/images (2).jpeg" alt="Facility 3" class="Facility3" />
           <h3>Library</h3><br>
           <p>Access to thousands of books and <br>journals</p>
         </div>
@@ -135,7 +135,7 @@
       <footer>
     <!-- Logo and Social Icons -->
     <div class="footer-section footer-logo">
-      <img src="/images/download (5).jpeg" alt="Logo">
+      <img src="../images/download (5).jpeg" alt="Logo">
       <div class="social-icons">
         <a href="#"><i class="fab fa-facebook-f"></i></a>
         <a href="#"><i class="fab fa-twitter"></i></a>
