--- a/public/admissions.html
+++ b/public/admissions.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Us - Saint Joseph Integrated Technical College</title>
+    <title>Admissions - Saint Joseph Integrated Technical College</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link rel="stylesheet" href="/styles/styles.css" />
-    <link rel="shortcut icon" href="/images/sjitc.png" type="image/x-icon" />
+    <link rel="stylesheet" href="../styles/style.css" />
+    <link rel="shortcut icon" href="../images/sjitc.png" type="image/x-icon" />
     <style>
         * {
       margin: 0;
@@ -21,7 +21,7 @@
     <!-- Header -->
     <header>
       <div class="logo">
-        <img src="/images/sjitc.png" alt="Logo" />
+        <img src="../images/sjitc.png" alt="Logo" />
       </div>
       <nav>
         <ul>
@@ -121,7 +121,7 @@
       <footer>
     <!-- Logo and Social Icons -->
     <div class="footer-section footer-logo">
-      <img src="/images/download (5).jpeg" alt="Logo">
+      <img src="../images/download (5).jpeg" alt="Logo">
       <div class="social-icons">
         <a href="#"><i class="fab fa-facebook-f"></i></a>
         <a href="#"><i class="fab fa-twitter"></i></a>
