--- a/public/index.html
+++ b/public/index.html
@@ -26,13 +26,13 @@
       </div>
       <nav>
         <ul>
-          <li><a href="/public/index.html" style="color: #FBBF24;">Home</a></li>
-          <li><a href="/public/about-us.html">About Us</a></li>
-          <li><a href="/public/admissions.html">Admissions</a></li>
-          <li><a href="/public/academics.html">Academics</a></li>
+          <li><a href="index.html"  style="color: #FBBF24;">Home</a></li>
+          <li><a href="about-us.html">About us</a></li>
+          <li><a href="admissions.html">Admissions</a></li>
+          <li><a href="academics.html">Academics</a></li>
           <li><a href="#">E-Services</a></li>
           <li><a href="#">E-Learning</a></li>
-          <li><a href="/public/contact-us.html">Contact Us</a></li>
+          <li><a href="contact-us.html">Contact Us</a></li>
         </ul>
       </nav>
       <a href="#" class="study-btn">STUDY ONLINE</a>
