--- a/public/academics.html
+++ b/public/academics.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Academics - Saint Joseph Integrated Technical College</title>
+    <title>Contact Us - Saint Joseph Integrated Technical College</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link rel="stylesheet" href="/styles/styles.css" />
-    <link rel="shortcut icon" href="/images/sjitc.png" type="image/x-icon" />
+    <link rel="stylesheet" href="../styles/styles.css" />
+    <link rel="shortcut icon" href="../images/sjitc.png" type="image/x-icon" />
     <style>
         * {
       margin: 0;
@@ -21,17 +21,17 @@
     <!-- Header -->
     <header>
       <div class="logo">
-        <img src="/images/sjitc.png" alt="Logo" />
+        <img src="../images/sjitc.png" alt="Logo" />
       </div>
       <nav>
         <ul>
-          <li><a href="/public/index.html">Home</a></li>
-          <li><a href="/public/about-us.html">About Us</a></li>
-          <li><a href="/public/admissions.html">Admissions</a></li>
-          <li><a href="/public/academics.html" style="color: #FBBF24;">Academics</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about-us.html">About us</a></li>
+          <li><a href="admissions.html">Admissions</a></li>
+          <li><a href="academics.html" style="color: #FBBF24;">Academics</a></li>
           <li><a href="#">E-Services</a></li>
           <li><a href="#">E-Learning</a></li>
-          <li><a href="/public/contact-us.html">Contact Us</a></li>
+          <li><a href="contact-us.html">Contact Us</a></li>
         </ul>
       </nav>
       <a href="#" class="study-btn">STUDY ONLINE</a>
@@ -70,7 +70,7 @@
      <footer>
     <!-- Logo and Social Icons -->
     <div class="footer-section footer-logo">
-      <img src="/images/download (5).jpeg" alt="Logo">
+      <img src="../images/download (5).jpeg" alt="Logo">
       <div class="social-icons">
         <a href="#"><i class="fab fa-facebook-f"></i></a>
         <a href="#"><i class="fab fa-twitter"></i></a>
