--- a/public/admissions.html
+++ b/public/admissions.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Admissions - Saint Joseph Integrated Technical College</title>
+    <title>Contact Us - Saint Joseph Integrated Technical College</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link rel="stylesheet" href="../styles/style.css" />
+    <link rel="stylesheet" href="../styles/styles.css" />
     <link rel="shortcut icon" href="../images/sjitc.png" type="image/x-icon" />
     <style>
         * {
@@ -25,13 +25,13 @@
       </div>
       <nav>
         <ul>
-          <li><a href="/public/index.html">Home</a></li>
-          <li><a href="/public/about-us.html">About Us</a></li>
-          <li><a href="/public/admissions.html" style="color: #FBBF24;">Admissions</a></li>
-          <li><a href="/public/academics.html">Academics</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about-us.html">About us</a></li>
+          <li><a href="admissions.html" style="color: #FBBF24;">Admissions</a></li>
+          <li><a href="academics.html">Academics</a></li>
           <li><a href="#">E-Services</a></li>
           <li><a href="#">E-Learning</a></li>
-          <li><a href="/public/contact-us.html">Contact Us</a></li>
+          <li><a href="contact-us.html">Contact Us</a></li>
         </ul>
       </nav>
       <a href="#" class="study-btn">STUDY ONLINE</a>
